Don't let images overflow Fixes #1

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,15 @@
 @import url("font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
 
+.features-row .major {
+	overflow: hidden;
+}
+
+.features-row .major img {
+	display: inline-block;
+	position: relative;
+}
+
 /*
 	Alpha by HTML5 UP
 	html5up.net | @ajlkn
